--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -7,3 +7,6 @@ ja:
         expense_item_id: 費目
         amount: 金額
         note: 備考
+      expense_item:
+        name: 費目名
+        display_order: 表示順
