--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -4,6 +4,7 @@ ja:
       outlay: 支出
     attributes:
       outlay:
+        created_at: 登録日
         expense_item_id: 費目
         amount: 金額
         note: 備考
