--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -7,7 +7,7 @@ ja:
         created_at: 登録日
         expense_item_id: 費目
         amount: 金額
-        note: 備考
+        note: メモ
       expense_item:
         name: 費目名
         display_order: 表示順
