支出一覧の見た目を整えた
- Tableの使用はあまり推奨している雰囲気ではなかったので Grid にした
- アコーディオンの初期表示で全て開いている(.activeになっている)が、これは仮の実装
- コメントアウトしている「操作」は、今後、編集や削除のアイコンを置く予定
- tooltip を使ったのでテストが落ちているので修正が必要

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -4,7 +4,7 @@ ja:
       outlay: 支出
     attributes:
       outlay:
-        created_at: 登録日
+        created_at: 日
         expense_item_id: 費目
         amount: 金額
         note: メモ
